// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -366,29 +366,29 @@
                      <div
                        class=\\"MuiFormControl-root-260\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-271 MuiFormLabel-error-274 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-271 MuiFormLabel-filled-275 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268 MuiInputLabel-shrink-267\\"
+                         data-shrink=\\"true\\"
                        >
                          <span>
                            Scale/Significance of work* 
                            <span
                              style=\\"font-weight: 700;\\"
                            >
                              (not for public view)
                            </span>
                          </span>
                          <span
-                           class=\\"MuiFormLabel-asterisk-277 MuiFormLabel-error-274\\"
+                           class=\\"MuiFormLabel-asterisk-277\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-error-304 MuiInput-error-290 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
+                         class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
                          label=\\"[object Object]\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-278\\"
@@ -399,18 +399,16 @@
                              class=\\"MuiSelect-select-279 MuiSelect-selectMenu-282 MuiInputBase-input-308 MuiInput-input-293\\"
                              id=\\"significance\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Major
                            </div>
                            <input
                              name=\\"significance\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454026\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-163 MuiSelect-icon-284\\"
                              focusable=\\"false\\"
@@ -421,15 +419,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-392 MuiFormHelperText-error-393 MuiFormHelperText-required-399\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41\\"
                      style=\\"margin-top: 24px;\\"
@@ -1813,13 +1806,10 @@
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
                            <li>
                              Author affiliation rows marked with red are required
-                           </li>
-                           <li>
-                             Scale/Significance of work is required
                            </li>
                            <li>
                              Creator research statement is required
                            </li>
                            <li>"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -539,22 +539,22 @@
                      <div
                        class=\\"MuiFormControl-root-260\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-271 MuiFormLabel-error-274 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-271 MuiFormLabel-filled-275 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268 MuiInputLabel-shrink-267\\"
+                         data-shrink=\\"true\\"
                        >
                          Audience size
                          <span
-                           class=\\"MuiFormLabel-asterisk-277 MuiFormLabel-error-274\\"
+                           class=\\"MuiFormLabel-asterisk-277\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-error-304 MuiInput-error-290 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
+                         class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
                          label=\\"Audience size\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-278\\"
@@ -565,18 +565,16 @@
                              class=\\"MuiSelect-select-279 MuiSelect-selectMenu-282 MuiInputBase-input-308 MuiInput-input-293\\"
                              id=\\"rek-audience-size\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Less than 100
                            </div>
                            <input
                              name=\\"fez_record_search_key_audience_size.rek_audience_size\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"453992\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-163 MuiSelect-icon-284\\"
                              focusable=\\"false\\"
@@ -587,15 +585,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-392 MuiFormHelperText-error-393 MuiFormHelperText-required-399\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49\\"
                    >
@@ -1809,13 +1802,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Audience size is required
                            </li>
                            <li>
                              Quality indicator is required
                            </li>
                            <li>"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -594,41 +594,40 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-260 MuiFormControl-fullWidth-263\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-271 MuiFormLabel-error-274 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-271 MuiFormLabel-filled-275 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268 MuiInputLabel-shrink-267\\"
+                         data-shrink=\\"true\\"
                        >
                          Quality indicators
                          <span
-                           class=\\"MuiFormLabel-asterisk-277 MuiFormLabel-error-274\\"
+                           class=\\"MuiFormLabel-asterisk-277\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-error-304 MuiInput-error-290 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
+                         class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
                        >
                          <div
                            class=\\"MuiSelect-root-278\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-279 MuiSelect-selectMenu-282 MuiInputBase-input-308 MuiInput-input-293\\"
                              id=\\"quality-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Commissioned by external body
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454036\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-163 MuiSelect-icon-284\\"
                              focusable=\\"false\\"
@@ -639,15 +638,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-392 MuiFormHelperText-error-393 MuiFormHelperText-required-399\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -1802,13 +1796,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Quality indicator is required
                            </li>
                            <li>
                              File submission to be completed
                            </li>
                          </ul>"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -992,33 +992,31 @@
                          <li
                            class=\\"MuiListItem-container-359\\"
                          >
                            <div
                              aria-label=\\"Select this author (Topology) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-358 WithTheme-WithWidth-ContributorRow---listItem-377 WithTheme-WithWidth-ContributorRow---highlighted-379 MuiListItem-default-361 MuiListItem-gutters-365 MuiListItem-divider-364 MuiListItem-secondaryAction-367\\"
+                             class=\\"MuiListItem-root-358 WithTheme-WithWidth-ContributorRow---listItem-377 WithTheme-WithWidth-ContributorRow---highlighted-379 WithTheme-WithWidth-ContributorRow---rowSelected-380 MuiListItem-default-361 MuiListItem-gutters-365 MuiListItem-divider-364 MuiListItem-secondaryAction-367\\"
                              id=\\"contributor-editor-row-0\\"
                              tabindex=\\"0\\"
                            >
                              <div
-                               class=\\"MuiListItemIcon-root-391\\"
+                               class=\\"MuiListItemIcon-root-391 WithTheme-WithWidth-ContributorRow---selected-381\\"
                              >
                                <svg
                                  aria-hidden=\\"true\\"
                                  class=\\"MuiSvgIcon-root-163\\"
                                  focusable=\\"false\\"
                                  role=\\"presentation\\"
                                  viewBox=\\"0 0 24 24\\"
                                >
                                  <path
-                                   d=\\"M0 0h24v24H0V0z\\"
-                                   fill=\\"none\\"
+                                   d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
                                  />
-                                 <g>
                                  <path
-                                     d=\\"M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
+                                   d=\\"M0 0h24v24H0z\\"
+                                   fill=\\"none\\"
                                  />
-                                 </g>
                                </svg>
                              </div>
                              <div
                                class=\\"MuiGrid-container-1 WithTheme-WithWidth-ContributorRow---listContainer-376\\"
                              >
@@ -1027,16 +1025,16 @@
                                >
                                  <div
                                    class=\\"MuiListItemText-root-369\\"
                                  >
                                    <p
-                                     class=\\"MuiTypography-root-107 WithTheme-WithWidth-ContributorRow---primary-383  MuiTypography-body2-115 MuiTypography-noWrap-133\\"
+                                     class=\\"MuiTypography-root-107 WithTheme-WithWidth-ContributorRow---primary-383 WithTheme-WithWidth-ContributorRow---selected-381 MuiTypography-body2-115 MuiTypography-noWrap-133\\"
                                    >
                                      Topology
                                    </p>
                                    <span
-                                     class=\\"MuiTypography-root-107 MuiTypography-caption-117 MuiTypography-noWrap-133\\"
+                                     class=\\"MuiTypography-root-107 WithTheme-WithWidth-ContributorRow---selected-381 MuiTypography-caption-117 MuiTypography-noWrap-133\\"
                                    >
                                      First  listed author
                                    </span>
                                  </div>
                                </div>
@@ -1065,11 +1063,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-159\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-163\\"
+                                     class=\\"MuiSvgIcon-root-163 WithTheme-WithWidth-ContributorRow---selected-381\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1097,11 +1095,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-159\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-163\\"
+                                     class=\\"MuiSvgIcon-root-163 WithTheme-WithWidth-ContributorRow---selected-381\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1561,10 +1559,227 @@
                                </button>
                              </span>
                            </div>
                          </li>
                        </ul>
+                       <div
+                         style=\\"margin-top: 24px;\\"
+                       >
+                         <div>
+                           <span
+                             class=\\"authorSteps\\"
+                           >
+                             Step 2 of 2
+                           </span>
+                            - 
+                           <b>
+                             Update the affiliation information
+                           </b>
+                           .
+                         </div>
+                         <div
+                           class=\\"MuiGrid-container-1 MuiGrid-spacing-xs-8-23\\"
+                           style=\\"margin-top: 8px;\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-2-45\\"
+                           >
+                             <div
+                               class=\\"MuiFormControl-root-260 MuiFormControl-fullWidth-263\\"
+                             >
+                               <label
+                                 class=\\"MuiFormLabel-root-271 MuiFormLabel-filled-275 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268 MuiInputLabel-shrink-267\\"
+                                 data-shrink=\\"true\\"
+                               >
+                                 Org affiliation
+                               </label>
+                               <div
+                                 class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
+                                 required=\\"\\"
+                               >
+                                 <div
+                                   class=\\"MuiSelect-root-278\\"
+                                 >
+                                   <div
+                                     aria-haspopup=\\"true\\"
+                                     aria-pressed=\\"false\\"
+                                     class=\\"MuiSelect-select-279 MuiSelect-selectMenu-282 MuiInputBase-input-308 MuiInput-input-293\\"
+                                     id=\\"org-affiliation-selector\\"
+                                     role=\\"button\\"
+                                     tabindex=\\"0\\"
+                                   >
+                                     Not UQ
+                                   </div>
+                                   <input
+                                     type=\\"hidden\\"
+                                     value=\\"NotUQ\\"
+                                   />
+                                   <svg
+                                     aria-hidden=\\"true\\"
+                                     class=\\"MuiSvgIcon-root-163 MuiSelect-icon-284\\"
+                                     focusable=\\"false\\"
+                                     role=\\"presentation\\"
+                                     viewBox=\\"0 0 24 24\\"
+                                   >
+                                     <path
+                                       d=\\"M7 10l5 5 5-5z\\"
+                                     />
+                                   </svg>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-true-43\\"
+                           >
+                             <div
+                               class=\\"MuiFormControl-root-260 MuiFormControl-fullWidth-263\\"
+                             >
+                               <label
+                                 class=\\"MuiFormLabel-root-271 MuiFormLabel-disabled-273 MuiFormLabel-filled-275 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268 MuiInputLabel-shrink-267\\"
+                                 data-shrink=\\"true\\"
+                                 for=\\"authors-name-as-published-field\\"
+                               >
+                                 Enter each author's name as published (eg. Smith, John)
+                                 <span
+                                   class=\\"MuiFormLabel-asterisk-277\\"
+                                 >
+                                    *
+                                 </span>
+                               </label>
+                               <div
+                                 class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-disabled-301 MuiInput-disabled-288 MuiInputBase-fullWidth-307 MuiInput-fullWidth-292 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
+                               >
+                                 <input
+                                   aria-invalid=\\"false\\"
+                                   autocomplete=\\"off\\"
+                                   class=\\"MuiInputBase-input-308 MuiInput-input-293 MuiInputBase-disabled-301 MuiInput-disabled-288\\"
+                                   disabled=\\"\\"
+                                   id=\\"authors-name-as-published-field\\"
+                                   placeholder=\\"Type the name exactly as published\\"
+                                   required=\\"\\"
+                                   type=\\"text\\"
+                                   value=\\"Topology\\"
+                                 />
+                               </div>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-1 MuiGrid-spacing-xs-8-23\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-2 MuiGrid-grid-xs-6-35\\"
+                               >
+                                 <div
+                                   class=\\"MuiFormControl-root-260 MuiFormControl-fullWidth-263\\"
+                                 >
+                                   <label
+                                     class=\\"MuiFormLabel-root-271 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268\\"
+                                     data-shrink=\\"false\\"
+                                     for=\\"org-affiliation-name\\"
+                                   >
+                                     Organisation
+                                     <span
+                                       class=\\"MuiFormLabel-asterisk-277\\"
+                                     >
+                                        *
+                                     </span>
+                                   </label>
+                                   <div
+                                     class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-fullWidth-307 MuiInput-fullWidth-292 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
+                                   >
+                                     <input
+                                       aria-invalid=\\"false\\"
+                                       class=\\"MuiInputBase-input-308 MuiInput-input-293\\"
+                                       id=\\"org-affiliation-name\\"
+                                       placeholder=\\"Enter the primary affiliated organisation\\"
+                                       required=\\"\\"
+                                       type=\\"text\\"
+                                       value=\\"\\"
+                                     />
+                                   </div>
+                                 </div>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-2 MuiGrid-grid-xs-6-35\\"
+                               >
+                                 <div
+                                   class=\\"MuiFormControl-root-260 MuiFormControl-fullWidth-263\\"
+                                 >
+                                   <label
+                                     class=\\"MuiFormLabel-root-271 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268\\"
+                                     data-shrink=\\"false\\"
+                                   >
+                                     Organisation type
+                                     <span
+                                       class=\\"MuiFormLabel-asterisk-277\\"
+                                     >
+                                        *
+                                     </span>
+                                   </label>
+                                   <div
+                                     class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
+                                   >
+                                     <div
+                                       class=\\"MuiSelect-root-278\\"
+                                     >
+                                       <div
+                                         aria-haspopup=\\"true\\"
+                                         aria-pressed=\\"false\\"
+                                         class=\\"MuiSelect-select-279 MuiSelect-selectMenu-282 MuiInputBase-input-308 MuiInput-input-293\\"
+                                         id=\\"org-affiliation-type\\"
+                                         role=\\"button\\"
+                                         tabindex=\\"0\\"
+                                       >
+                                         <span>
+                                           ​
+                                         </span>
+                                       </div>
+                                       <input
+                                         type=\\"hidden\\"
+                                         value=\\"\\"
+                                       />
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-163 MuiSelect-icon-284\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
+                                       >
+                                         <path
+                                           d=\\"M7 10l5 5 5-5z\\"
+                                         />
+                                       </svg>
+                                     </div>
+                                   </div>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41\\"
+                             style=\\"margin-bottom: 8px;\\"
+                           >
+                             <button
+                               class=\\"MuiButtonBase-root-160 MuiButtonBase-disabled-161 MuiButton-root-321 MuiButton-contained-332 MuiButton-containedPrimary-333 MuiButton-raised-335 MuiButton-raisedPrimary-336 MuiButton-disabled-341 MuiButton-fullWidth-346\\"
+                               disabled=\\"\\"
+                               id=\\"submit-author\\"
+                               tabindex=\\"-1\\"
+                               type=\\"button\\"
+                             >
+                               <span
+                                 class=\\"MuiButton-label-322\\"
+                               >
+                                 Update author
+                               </span>
+                             </button>
+                           </div>
+                         </div>
+                       </div>
                      </div>
                    </div>
                    <span
                      class=\\"MuiTypography-root-107 MuiTypography-caption-117 MuiTypography-colorError-141\\"
                    >"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -992,31 +992,33 @@
                          <li
                            class=\\"MuiListItem-container-359\\"
                          >
                            <div
                              aria-label=\\"Select this author (Topology) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-358 WithTheme-WithWidth-ContributorRow---listItem-377 WithTheme-WithWidth-ContributorRow---highlighted-379 WithTheme-WithWidth-ContributorRow---rowSelected-380 MuiListItem-default-361 MuiListItem-gutters-365 MuiListItem-divider-364 MuiListItem-secondaryAction-367\\"
+                             class=\\"MuiListItem-root-358 WithTheme-WithWidth-ContributorRow---listItem-377 MuiListItem-default-361 MuiListItem-gutters-365 MuiListItem-divider-364 MuiListItem-secondaryAction-367\\"
                              id=\\"contributor-editor-row-0\\"
                              tabindex=\\"0\\"
                            >
                              <div
-                               class=\\"MuiListItemIcon-root-391 WithTheme-WithWidth-ContributorRow---selected-381\\"
+                               class=\\"MuiListItemIcon-root-391\\"
                              >
                                <svg
                                  aria-hidden=\\"true\\"
                                  class=\\"MuiSvgIcon-root-163\\"
                                  focusable=\\"false\\"
                                  role=\\"presentation\\"
                                  viewBox=\\"0 0 24 24\\"
                                >
                                  <path
-                                   d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
+                                   d=\\"M0 0h24v24H0V0z\\"
+                                   fill=\\"none\\"
                                  />
+                                 <g>
                                    <path
-                                   d=\\"M0 0h24v24H0z\\"
-                                   fill=\\"none\\"
+                                     d=\\"M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
                                    />
+                                 </g>
                                </svg>
                              </div>
                              <div
                                class=\\"MuiGrid-container-1 WithTheme-WithWidth-ContributorRow---listContainer-376\\"
                              >
@@ -1025,27 +1027,38 @@
                                >
                                  <div
                                    class=\\"MuiListItemText-root-369\\"
                                  >
                                    <p
-                                     class=\\"MuiTypography-root-107 WithTheme-WithWidth-ContributorRow---primary-383 WithTheme-WithWidth-ContributorRow---selected-381 MuiTypography-body2-115 MuiTypography-noWrap-133\\"
+                                     class=\\"MuiTypography-root-107 WithTheme-WithWidth-ContributorRow---primary-383  MuiTypography-body2-115 MuiTypography-noWrap-133\\"
                                    >
                                      Topology
                                    </p>
                                    <span
-                                     class=\\"MuiTypography-root-107 WithTheme-WithWidth-ContributorRow---selected-381 MuiTypography-caption-117 MuiTypography-noWrap-133\\"
+                                     class=\\"MuiTypography-root-107 MuiTypography-caption-117 MuiTypography-noWrap-133\\"
                                    >
                                      First  listed author
                                    </span>
                                  </div>
                                </div>
                                <div
                                  class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-5-48\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-369\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-107 WithTheme-WithWidth-ContributorRow---primary-383  MuiTypography-body2-115 MuiTypography-noWrap-133\\"
+                                   >
+                                     test
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-107   MuiTypography-caption-117 MuiTypography-noWrap-133\\"
+                                   >
+                                     Organisation type: Government
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-375\\"
@@ -1063,11 +1076,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-159\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-163 WithTheme-WithWidth-ContributorRow---selected-381\\"
+                                     class=\\"MuiSvgIcon-root-163\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1095,11 +1108,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-159\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-163 WithTheme-WithWidth-ContributorRow---selected-381\\"
+                                     class=\\"MuiSvgIcon-root-163\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1559,227 +1572,10 @@
                                </button>
                              </span>
                            </div>
                          </li>
                        </ul>
-                       <div
-                         style=\\"margin-top: 24px;\\"
-                       >
-                         <div>
-                           <span
-                             class=\\"authorSteps\\"
-                           >
-                             Step 2 of 2
-                           </span>
-                            - 
-                           <b>
-                             Update the affiliation information
-                           </b>
-                           .
-                         </div>
-                         <div
-                           class=\\"MuiGrid-container-1 MuiGrid-spacing-xs-8-23\\"
-                           style=\\"margin-top: 8px;\\"
-                         >
-                           <div
-                             class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-2-45\\"
-                           >
-                             <div
-                               class=\\"MuiFormControl-root-260 MuiFormControl-fullWidth-263\\"
-                             >
-                               <label
-                                 class=\\"MuiFormLabel-root-271 MuiFormLabel-filled-275 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268 MuiInputLabel-shrink-267\\"
-                                 data-shrink=\\"true\\"
-                               >
-                                 Org affiliation
-                               </label>
-                               <div
-                                 class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
-                                 required=\\"\\"
-                               >
-                                 <div
-                                   class=\\"MuiSelect-root-278\\"
-                                 >
-                                   <div
-                                     aria-haspopup=\\"true\\"
-                                     aria-pressed=\\"false\\"
-                                     class=\\"MuiSelect-select-279 MuiSelect-selectMenu-282 MuiInputBase-input-308 MuiInput-input-293\\"
-                                     id=\\"org-affiliation-selector\\"
-                                     role=\\"button\\"
-                                     tabindex=\\"0\\"
-                                   >
-                                     Not UQ
-                                   </div>
-                                   <input
-                                     type=\\"hidden\\"
-                                     value=\\"NotUQ\\"
-                                   />
-                                   <svg
-                                     aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-163 MuiSelect-icon-284\\"
-                                     focusable=\\"false\\"
-                                     role=\\"presentation\\"
-                                     viewBox=\\"0 0 24 24\\"
-                                   >
-                                     <path
-                                       d=\\"M7 10l5 5 5-5z\\"
-                                     />
-                                   </svg>
-                                 </div>
-                               </div>
-                             </div>
-                           </div>
-                           <div
-                             class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-true-43\\"
-                           >
-                             <div
-                               class=\\"MuiFormControl-root-260 MuiFormControl-fullWidth-263\\"
-                             >
-                               <label
-                                 class=\\"MuiFormLabel-root-271 MuiFormLabel-disabled-273 MuiFormLabel-filled-275 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268 MuiInputLabel-shrink-267\\"
-                                 data-shrink=\\"true\\"
-                                 for=\\"authors-name-as-published-field\\"
-                               >
-                                 Enter each author's name as published (eg. Smith, John)
-                                 <span
-                                   class=\\"MuiFormLabel-asterisk-277\\"
-                                 >
-                                    *
-                                 </span>
-                               </label>
-                               <div
-                                 class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-disabled-301 MuiInput-disabled-288 MuiInputBase-fullWidth-307 MuiInput-fullWidth-292 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
-                               >
-                                 <input
-                                   aria-invalid=\\"false\\"
-                                   autocomplete=\\"off\\"
-                                   class=\\"MuiInputBase-input-308 MuiInput-input-293 MuiInputBase-disabled-301 MuiInput-disabled-288\\"
-                                   disabled=\\"\\"
-                                   id=\\"authors-name-as-published-field\\"
-                                   placeholder=\\"Type the name exactly as published\\"
-                                   required=\\"\\"
-                                   type=\\"text\\"
-                                   value=\\"Topology\\"
-                                 />
-                               </div>
-                             </div>
-                           </div>
-                           <div
-                             class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41\\"
-                           >
-                             <div
-                               class=\\"MuiGrid-container-1 MuiGrid-spacing-xs-8-23\\"
-                             >
-                               <div
-                                 class=\\"MuiGrid-item-2 MuiGrid-grid-xs-6-35\\"
-                               >
-                                 <div
-                                   class=\\"MuiFormControl-root-260 MuiFormControl-fullWidth-263\\"
-                                 >
-                                   <label
-                                     class=\\"MuiFormLabel-root-271 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268\\"
-                                     data-shrink=\\"false\\"
-                                     for=\\"org-affiliation-name\\"
-                                   >
-                                     Organisation
-                                     <span
-                                       class=\\"MuiFormLabel-asterisk-277\\"
-                                     >
-                                        *
-                                     </span>
-                                   </label>
-                                   <div
-                                     class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-fullWidth-307 MuiInput-fullWidth-292 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
-                                   >
-                                     <input
-                                       aria-invalid=\\"false\\"
-                                       class=\\"MuiInputBase-input-308 MuiInput-input-293\\"
-                                       id=\\"org-affiliation-name\\"
-                                       placeholder=\\"Enter the primary affiliated organisation\\"
-                                       required=\\"\\"
-                                       type=\\"text\\"
-                                       value=\\"\\"
-                                     />
-                                   </div>
-                                 </div>
-                               </div>
-                               <div
-                                 class=\\"MuiGrid-item-2 MuiGrid-grid-xs-6-35\\"
-                               >
-                                 <div
-                                   class=\\"MuiFormControl-root-260 MuiFormControl-fullWidth-263\\"
-                                 >
-                                   <label
-                                     class=\\"MuiFormLabel-root-271 MuiFormLabel-required-276 MuiInputLabel-root-264 MuiInputLabel-formControl-265 MuiInputLabel-animated-268\\"
-                                     data-shrink=\\"false\\"
-                                   >
-                                     Organisation type
-                                     <span
-                                       class=\\"MuiFormLabel-asterisk-277\\"
-                                     >
-                                        *
-                                     </span>
-                                   </label>
-                                   <div
-                                     class=\\"MuiInputBase-root-298 MuiInput-root-285 MuiInput-underline-289 MuiInputBase-formControl-299 MuiInput-formControl-286\\"
-                                   >
-                                     <div
-                                       class=\\"MuiSelect-root-278\\"
-                                     >
-                                       <div
-                                         aria-haspopup=\\"true\\"
-                                         aria-pressed=\\"false\\"
-                                         class=\\"MuiSelect-select-279 MuiSelect-selectMenu-282 MuiInputBase-input-308 MuiInput-input-293\\"
-                                         id=\\"org-affiliation-type\\"
-                                         role=\\"button\\"
-                                         tabindex=\\"0\\"
-                                       >
-                                         <span>
-                                           ​
-                                         </span>
-                                       </div>
-                                       <input
-                                         type=\\"hidden\\"
-                                         value=\\"\\"
-                                       />
-                                       <svg
-                                         aria-hidden=\\"true\\"
-                                         class=\\"MuiSvgIcon-root-163 MuiSelect-icon-284\\"
-                                         focusable=\\"false\\"
-                                         role=\\"presentation\\"
-                                         viewBox=\\"0 0 24 24\\"
-                                       >
-                                         <path
-                                           d=\\"M7 10l5 5 5-5z\\"
-                                         />
-                                       </svg>
-                                     </div>
-                                   </div>
-                                 </div>
-                               </div>
-                             </div>
-                           </div>
-                           <div
-                             class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41\\"
-                             style=\\"margin-bottom: 8px;\\"
-                           >
-                             <button
-                               class=\\"MuiButtonBase-root-160 MuiButtonBase-disabled-161 MuiButton-root-321 MuiButton-contained-332 MuiButton-containedPrimary-333 MuiButton-raised-335 MuiButton-raisedPrimary-336 MuiButton-disabled-341 MuiButton-fullWidth-346\\"
-                               disabled=\\"\\"
-                               id=\\"submit-author\\"
-                               tabindex=\\"-1\\"
-                               type=\\"button\\"
-                             >
-                               <span
-                                 class=\\"MuiButton-label-322\\"
-                               >
-                                 Update author
-                               </span>
-                             </button>
-                           </div>
-                         </div>
-                       </div>
                      </div>
                    </div>
                    <span
                      class=\\"MuiTypography-root-107 MuiTypography-caption-117 MuiTypography-colorError-141\\"
                    >"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1131,11 +1131,11 @@
                          <li
                            class=\\"MuiListItem-container-359\\"
                          >
                            <div
                              aria-label=\\"Select this author (Davidson, Robert) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-358 WithTheme-WithWidth-ContributorRow---listItem-377 WithTheme-WithWidth-ContributorRow---highlighted-379 MuiListItem-default-361 MuiListItem-gutters-365 MuiListItem-divider-364 MuiListItem-secondaryAction-367\\"
+                             class=\\"MuiListItem-root-358 WithTheme-WithWidth-ContributorRow---listItem-377 MuiListItem-default-361 MuiListItem-gutters-365 MuiListItem-divider-364 MuiListItem-secondaryAction-367\\"
                              id=\\"contributor-editor-row-1\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-391\\"
@@ -1182,11 +1182,22 @@
                                <div
                                  class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-5-48\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-369\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-107 WithTheme-WithWidth-ContributorRow---primary-383  MuiTypography-body2-115 MuiTypography-noWrap-133\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-107   MuiTypography-caption-117 MuiTypography-noWrap-133\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-375\\""
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 7`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1459,11 +1459,11 @@
                          <li
                            class=\\"MuiListItem-container-359\\"
                          >
                            <div
                              aria-label=\\"Select this author (The Brodsky Quartet) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-358 WithTheme-WithWidth-ContributorRow---listItem-377 WithTheme-WithWidth-ContributorRow---highlighted-379 MuiListItem-default-361 MuiListItem-gutters-365 MuiListItem-divider-364 MuiListItem-secondaryAction-367\\"
+                             class=\\"MuiListItem-root-358 WithTheme-WithWidth-ContributorRow---listItem-377 MuiListItem-default-361 MuiListItem-gutters-365 MuiListItem-divider-364 MuiListItem-secondaryAction-367\\"
                              id=\\"contributor-editor-row-3\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-391\\"
@@ -1510,14 +1510,25 @@
                                <div
                                  class=\\"MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-5-48\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-369\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-107 WithTheme-WithWidth-ContributorRow---primary-383  MuiTypography-body2-115 MuiTypography-noWrap-133\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-107   MuiTypography-caption-117 MuiTypography-noWrap-133\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
                                  </div>
                                </div>
                              </div>
+                           </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-375\\"
                            >
                              <span
                                title=\\"Move item up the order\\"
@@ -1585,15 +1596,10 @@
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
-                   <span
-                     class=\\"MuiTypography-root-107 MuiTypography-caption-117 MuiTypography-colorError-141\\"
-                   >
-                     Rows marked with a red prefix must be updated
-                   </span>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -1813,13 +1819,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Author affiliation rows marked with red are required
-                           </li>
                            <li>
                              Creator research statement is required
                            </li>
                            <li>
                              File submission to be completed"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -368,29 +368,29 @@
                      <div
                        class=\\"MuiFormControl-root-663\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-674 MuiFormLabel-error-677 MuiFormLabel-required-679 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-674 MuiFormLabel-filled-678 MuiFormLabel-required-679 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671 MuiInputLabel-shrink-670\\"
+                         data-shrink=\\"true\\"
                        >
                          <span>
                            Scale/Significance of work* 
                            <span
                              style=\\"font-weight: 700;\\"
                            >
                              (not for public view)
                            </span>
                          </span>
                          <span
-                           class=\\"MuiFormLabel-asterisk-680 MuiFormLabel-error-677\\"
+                           class=\\"MuiFormLabel-asterisk-680\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-701 MuiInput-root-688 MuiInput-underline-692 MuiInputBase-error-707 MuiInput-error-693 MuiInputBase-formControl-702 MuiInput-formControl-689\\"
+                         class=\\"MuiInputBase-root-701 MuiInput-root-688 MuiInput-underline-692 MuiInputBase-formControl-702 MuiInput-formControl-689\\"
                          label=\\"[object Object]\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-681\\"
@@ -401,18 +401,16 @@
                              class=\\"MuiSelect-select-682 MuiSelect-selectMenu-685 MuiInputBase-input-711 MuiInput-input-696\\"
                              id=\\"significance\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Major
                            </div>
                            <input
                              name=\\"significance\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454026\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-566 MuiSelect-icon-687\\"
                              focusable=\\"false\\"
@@ -423,15 +421,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-795 MuiFormHelperText-error-796 MuiFormHelperText-required-802\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-405 MuiGrid-grid-xs-12-444\\"
                      style=\\"margin-top: 24px;\\"
@@ -1856,13 +1849,10 @@
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
                            <li>
                              Author affiliation rows marked with red are required
-                           </li>
-                           <li>
-                             Scale/Significance of work is required
                            </li>
                            <li>
                              Creator research statement is required
                            </li>
                            <li>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -537,45 +537,38 @@
                    />
                    <div
                      class=\\"MuiGrid-item-405 MuiGrid-grid-xs-12-444 MuiGrid-grid-sm-12-458\\"
                    >
                      <div
-                       aria-describedby=\\"rek-total-pages-helper-text\\"
                        class=\\"MuiFormControl-root-663 MuiFormControl-fullWidth-666\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-674 MuiFormLabel-error-677 MuiFormLabel-required-679 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-674 MuiFormLabel-filled-678 MuiFormLabel-required-679 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671 MuiInputLabel-shrink-670\\"
+                         data-shrink=\\"true\\"
                          for=\\"rek-total-pages\\"
                        >
                          Total pages/Extent
                          <span
-                           class=\\"MuiFormLabel-asterisk-680 MuiFormLabel-error-677\\"
+                           class=\\"MuiFormLabel-asterisk-680\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-701 MuiInput-root-688 MuiInput-underline-692 MuiInputBase-error-707 MuiInput-error-693 MuiInputBase-fullWidth-710 MuiInput-fullWidth-695 MuiInputBase-formControl-702 MuiInput-formControl-689\\"
+                         class=\\"MuiInputBase-root-701 MuiInput-root-688 MuiInput-underline-692 MuiInputBase-fullWidth-710 MuiInput-fullWidth-695 MuiInputBase-formControl-702 MuiInput-formControl-689\\"
                        >
                          <input
-                           aria-invalid=\\"true\\"
+                           aria-invalid=\\"false\\"
                            class=\\"MuiInputBase-input-711 MuiInput-input-696\\"
                            id=\\"rek-total-pages\\"
                            name=\\"fez_record_search_key_total_pages.rek_total_pages\\"
                            placeholder=\\"Enter total pages, size or duration of work\\"
                            required=\\"\\"
                            type=\\"text\\"
-                           value=\\"\\"
+                           value=\\"10\\"
                          />
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-795 MuiFormHelperText-error-796 MuiFormHelperText-required-802\\"
-                         id=\\"rek-total-pages-helper-text\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-405 MuiGrid-grid-xs-12-444 MuiGrid-grid-sm-6-452\\"
                    >
@@ -1852,13 +1845,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Total page is required
                            </li>
                            <li>
                              Audience size is required
                            </li>
                            <li>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -575,22 +575,22 @@
                      <div
                        class=\\"MuiFormControl-root-663\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-674 MuiFormLabel-error-677 MuiFormLabel-required-679 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-674 MuiFormLabel-filled-678 MuiFormLabel-required-679 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671 MuiInputLabel-shrink-670\\"
+                         data-shrink=\\"true\\"
                        >
                          Audience size
                          <span
-                           class=\\"MuiFormLabel-asterisk-680 MuiFormLabel-error-677\\"
+                           class=\\"MuiFormLabel-asterisk-680\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-701 MuiInput-root-688 MuiInput-underline-692 MuiInputBase-error-707 MuiInput-error-693 MuiInputBase-formControl-702 MuiInput-formControl-689\\"
+                         class=\\"MuiInputBase-root-701 MuiInput-root-688 MuiInput-underline-692 MuiInputBase-formControl-702 MuiInput-formControl-689\\"
                          label=\\"Audience size\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-681\\"
@@ -601,18 +601,16 @@
                              class=\\"MuiSelect-select-682 MuiSelect-selectMenu-685 MuiInputBase-input-711 MuiInput-input-696\\"
                              id=\\"rek-audience-size\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Less than 100
                            </div>
                            <input
                              name=\\"fez_record_search_key_audience_size.rek_audience_size\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"453992\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-566 MuiSelect-icon-687\\"
                              focusable=\\"false\\"
@@ -623,15 +621,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-795 MuiFormHelperText-error-796 MuiFormHelperText-required-802\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-405 MuiGrid-grid-xs-12-444 MuiGrid-grid-sm-6-452\\"
                    >
@@ -1845,13 +1838,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Audience size is required
                            </li>
                            <li>
                              Quality indicator is required
                            </li>
                            <li>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -630,41 +630,40 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-663 MuiFormControl-fullWidth-666\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-674 MuiFormLabel-error-677 MuiFormLabel-required-679 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-674 MuiFormLabel-filled-678 MuiFormLabel-required-679 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671 MuiInputLabel-shrink-670\\"
+                         data-shrink=\\"true\\"
                        >
                          Quality indicators
                          <span
-                           class=\\"MuiFormLabel-asterisk-680 MuiFormLabel-error-677\\"
+                           class=\\"MuiFormLabel-asterisk-680\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-701 MuiInput-root-688 MuiInput-underline-692 MuiInputBase-error-707 MuiInput-error-693 MuiInputBase-formControl-702 MuiInput-formControl-689\\"
+                         class=\\"MuiInputBase-root-701 MuiInput-root-688 MuiInput-underline-692 MuiInputBase-formControl-702 MuiInput-formControl-689\\"
                        >
                          <div
                            class=\\"MuiSelect-root-681\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-682 MuiSelect-selectMenu-685 MuiInputBase-input-711 MuiInput-input-696\\"
                              id=\\"quality-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Commissioned by external body
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454036\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-566 MuiSelect-icon-687\\"
                              focusable=\\"false\\"
@@ -675,15 +674,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-795 MuiFormHelperText-error-796 MuiFormHelperText-required-802\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -1838,13 +1832,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Quality indicator is required
                            </li>
                            <li>
                              File submission to be completed
                            </li>
                          </ul>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 5`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1155,11 +1155,11 @@
                          <li
                            class=\\"MuiListItem-container-762\\"
                          >
                            <div
                              aria-label=\\"Select this author (Grinberg, Anna) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-761 WithTheme-WithWidth-ContributorRow---listItem-780 WithTheme-WithWidth-ContributorRow---highlighted-782 MuiListItem-default-764 MuiListItem-gutters-768 MuiListItem-divider-767 MuiListItem-secondaryAction-770\\"
+                             class=\\"MuiListItem-root-761 WithTheme-WithWidth-ContributorRow---listItem-780 MuiListItem-default-764 MuiListItem-gutters-768 MuiListItem-divider-767 MuiListItem-secondaryAction-770\\"
                              id=\\"contributor-editor-row-1\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-794\\"
@@ -1206,11 +1206,22 @@
                                <div
                                  class=\\"MuiGrid-item-405 MuiGrid-grid-xs-12-444 MuiGrid-grid-sm-5-451\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-772\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-510 WithTheme-WithWidth-ContributorRow---primary-786  MuiTypography-body2-518 MuiTypography-noWrap-536\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-510   MuiTypography-caption-520 MuiTypography-noWrap-536\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-778\\""
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 7`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1325,11 +1325,11 @@
                          <li
                            class=\\"MuiListItem-container-762\\"
                          >
                            <div
                              aria-label=\\"Select this author (Healey, Christopher ) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-761 WithTheme-WithWidth-ContributorRow---listItem-780 WithTheme-WithWidth-ContributorRow---highlighted-782 MuiListItem-default-764 MuiListItem-gutters-768 MuiListItem-divider-767 MuiListItem-secondaryAction-770\\"
+                             class=\\"MuiListItem-root-761 WithTheme-WithWidth-ContributorRow---listItem-780 MuiListItem-default-764 MuiListItem-gutters-768 MuiListItem-divider-767 MuiListItem-secondaryAction-770\\"
                              id=\\"contributor-editor-row-2\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-794\\"
@@ -1376,11 +1376,22 @@
                                <div
                                  class=\\"MuiGrid-item-405 MuiGrid-grid-xs-12-444 MuiGrid-grid-sm-5-451\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-772\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-510 WithTheme-WithWidth-ContributorRow---primary-786  MuiTypography-body2-518 MuiTypography-noWrap-536\\"
+                                   >
+                                     test
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-510   MuiTypography-caption-520 MuiTypography-noWrap-536\\"
+                                   >
+                                     Organisation type: Government
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-778\\""
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1495,11 +1495,11 @@
                          <li
                            class=\\"MuiListItem-container-762\\"
                          >
                            <div
                              aria-label=\\"Select this author (Tomlinson, Vanessa ) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-761 WithTheme-WithWidth-ContributorRow---listItem-780 WithTheme-WithWidth-ContributorRow---highlighted-782 MuiListItem-default-764 MuiListItem-gutters-768 MuiListItem-divider-767 MuiListItem-secondaryAction-770\\"
+                             class=\\"MuiListItem-root-761 WithTheme-WithWidth-ContributorRow---listItem-780 MuiListItem-default-764 MuiListItem-gutters-768 MuiListItem-divider-767 MuiListItem-secondaryAction-770\\"
                              id=\\"contributor-editor-row-3\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-794\\"
@@ -1546,14 +1546,25 @@
                                <div
                                  class=\\"MuiGrid-item-405 MuiGrid-grid-xs-12-444 MuiGrid-grid-sm-5-451\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-772\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-510 WithTheme-WithWidth-ContributorRow---primary-786  MuiTypography-body2-518 MuiTypography-noWrap-536\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-510   MuiTypography-caption-520 MuiTypography-noWrap-536\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
                                  </div>
                                </div>
                              </div>
+                           </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-778\\"
                            >
                              <span
                                title=\\"Move item up the order\\"
@@ -1621,15 +1632,10 @@
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
-                   <span
-                     class=\\"MuiTypography-root-510 MuiTypography-caption-520 MuiTypography-colorError-544\\"
-                   >
-                     Rows marked with a red prefix must be updated
-                   </span>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -1849,13 +1855,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Author affiliation rows marked with red are required
-                           </li>
                            <li>
                              Creator research statement is required
                            </li>
                            <li>
                              File submission to be completed"
`;
